--- a/bloggit/public/index.html
+++ b/bloggit/public/index.html
@@ -9,7 +9,7 @@
       <style>
           body{
               margin: 0;
-              font-family: Montserrat;
+              font-family: 'Avenir', Helvetica, Arial, sans-serif;
           }
       </style>
   </head>
