--- a/bloggit/public/index.html
+++ b/bloggit/public/index.html
@@ -10,6 +10,7 @@
           body{
               margin: 0;
               font-family: 'Avenir', Helvetica, Arial, sans-serif;
+background: #e3e8ee;
           }
       </style>
   </head>
